# buddy_allocator

./: CMakeLists.txt  README.md
benchmark/: CMakeLists.txt  benchmark.cpp  benchmark.h
buddy/: CMakeLists.txt  buddy_allocator.cpp  buddy_allocator.h
test/: CMakeLists.txt  test.cpp
